[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Cenas/Game Over.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/GnuUnifontFull-Pm9P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/Generic_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Musica/Dead.ogg" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[node name="Game Over" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -540.0
margin_right = 270.0
margin_bottom = 540.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 540.0, 500.0, 580.0, 560.0, 520.0 ],
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 270.0, 392.0, 150.0, 250.0, 290.0, 130.0, 410.0 ]
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -50.5
margin_bottom = 50.5
custom_constants/separation = -20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 540.0
margin_bottom = 25.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Leave" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
position = Vector2( 290, 90.9419 )

[node name="Button_Restart" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
position = Vector2( 130, 91.9944 )

[node name="Title" type="Label" parent="VBoxContainer"]
margin_top = 5.0
margin_right = 540.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="hide" from="." to="." method="_on_Game_Over_hide"]
[connection signal="visibility_changed" from="." to="." method="_on_Game_Over_visibility_changed"]
